--- a/项目/平安科院/平安科院V1.0.md
+++ b/项目/平安科院/平安科院V1.0.md
@@ -111,3 +111,19 @@ safe_keyuan
 
 后端、前台、后台三套代码全部放置==safe_keyuan==仓库，方便统一管理
 
+
+
+# 时间安排
+
+- 了解需求及技术准备（9.7-9.9）
+
+- 项目排期及制定开发计划（9.8）
+
+- 开发阶段（9.9~待定）
+  - 数据库设计
+  - 环境搭建
+  - 开发
+- 联调
+- bug修复
+- 交付
+
