--- a/项目/平安科院/平安科院项目V1.0.md
+++ b/项目/平安科院/平安科院项目V1.0.md
@@ -99,15 +99,17 @@
 
 ### 数据库
 
+59.110.218.15:3307
+
 pinganky
+
+Paky@2020
 
 
 
 ## GitLab项目
 
 safe_keyuan
-
-
 
 后端、前台、后台三套代码全部放置==safe_keyuan==仓库，方便统一管理
 
